# test_thread_pool

./: CMakeLists.txt  README.md  ThreadPool на C++ (тестовое задание) (1).txt
src/: main.cpp  simple_delims.cpp  simple_delims.hh
thread_pool/: CMakeLists.txt  action.cpp  action.hh  thread.cpp  thread.hh  thread_pool.cpp  thread_pool.hh
